--- a/src/components/Admin/AdminComponents/ApplicantRow.css
+++ b/src/components/Admin/AdminComponents/ApplicantRow.css
@@ -1,14 +1,17 @@
 .List {
-    border: 1px solid #d9dddd;
+    border-right: 1px solid #61486A;
+    border-left: 1px solid #61486A;
 }
 
 .ListItemEven, .ListItemOdd {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 0.1px solid black;
+    border-bottom: 0.1px solid #61486A;
 }
 
 .ListItemEven {
-    background-color: #f8f8f0;
+    background-color: #F9F6F9;
+    border-top: 0.1px solid #61486A;
+    border-bottom: 0.1px solid #61486A;
 }
