--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,15 @@ body {
   height: 100%;
 }
 
+html {
+  height: 100%
+}
+
+#root, #app{
+  height: 100%;
+  min-height: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
